# django-gitolite

./: .gitignore  README.md  setup.cfg  setup.py
django_gitolite/: __init__.py  apps.py  models.py  urls.py  utils.py  version.py  views.py
django_gitolite/management/commands/: gitolitedelete.py  gitolitehook.py  gitolitetrigger.py
django_gitolite/migrations/: 0001_initial.py
eyl/django/gitolite/: models.py  utils.py
eyl/django/gitolite/management/commands/: gitolitehook.py  gitolitetrigger.py
