[metadata]
name = django-gitolite
version = 0.2.2
description = A basic Django app for using Gitolite
long_description_content_type = text/markdown
long_description = file: README.md
url = https://eyl.io/
author = Jonathan Eyolfson
author_email = eyolfson@gmail.com
license = AGPL-3.0+
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
